Fix figcaption centering by setting text-align directly on element

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -272,6 +272,7 @@ body {
   font-size: 13px;
   color: var(--text-light);
   font-style: italic;
+  text-align: center;
 }
 
 .back-link {
